<resources>
    <string name="app_name">Happy Birthday Rachu! &lt;3</string>
    <string name="sahithi">Sahithi&#58; "Many many happy returns of the day Rachu! Keep smiling &lt;3"</string>
    <string name="jahnavi">Jahnavi&#58; "Adding one more year to that cute lil' smile you've got, wish you a very very happy birthday Rachana!! Really hope you get all the good things you deserve. Stay happy and keep smiling!"</string>
    <string name="jyothi">Jyothi&#58; "Happy birthday racchu&#8230;Hope all your wishes come true"</string>
    <string name="krishnasri">Krishna&#58; "Happy, happy birthday Rachana!!! You were my first friend in this college and I hated this place a little less because of you :) Good luck and have fun like you always do!"</string>
    <string name="madhuri">Madhuri&#58; "1st thought sadhu grl Cha na type avar lera anukunna but got a cute barre finally INA koncham Ade bapath anuko stl my barre wish u a very hpy bday my dear barre b chubby b sadhu barre n b rachu 4 ever keep smiling"</string>
    <string name="sushma">Sushma&#58; "To the girl whose smile is enough to melt anyone's heart and whose innocence makes everyone fall in love with her&#8230;a very very happy birthday Rachu!! Keep stealing everyone's hearts with your mesmerising smile. And stay the same naughty innocent girl &#58;)"</string>
    <string name="sanjana">Sanjana&#58; "happy bday wasty&#8230;I wish you luck for all your exams coming ahead."</string>
    <string name="soumya">Soumya&#58; "Happy birthday rachu, stay blessed&#8230;Keep smiling."</string>
</resources>
