<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/row0"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/a0" />

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row0" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/a1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/a2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row1" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/a3"
                android:layout_weight="1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/sahithi"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row2" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/b1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/b2"
                android:layout_weight="1"  />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row3" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/jahnavi"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/b3"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row4" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/c1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/c2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row5" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/c3"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/jyothi"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row6" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/d1"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/d2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row7" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/krishnasri"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/d3"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row8" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/e1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/e2"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row9" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/e3"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/madhuri"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/row11"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/f0"
            android:layout_below="@id/row10" />

        <LinearLayout
            android:id="@+id/row12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row11" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/f1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/f2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row12" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/sushma"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/f3"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row13" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/g1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/g2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row14" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/g3"
                android:layout_weight="1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/sanjana"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row15" >

            <ImageView
                android:id="@+id/h1"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/h1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/h2"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row16" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:textSize="9sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/soumya"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/h3"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/row17" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/i1"
                android:layout_weight="1" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/i2"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>